--- a/.github/workflows/delete-workflow-runs.yml
+++ b/.github/workflows/delete-workflow-runs.yml
@@ -3,7 +3,12 @@ on:
 # Run weekly, at 00:00 on sunday.
   schedule:
     - cron: '0 0 * * 0'
+  
   workflow_dispatch:
+    inputs:
+      tags:
+        description:
+          "run from cmdline"
 
 jobs:
   del_runs:
