--- a/.github/workflows/delete-workflow-runs.yml
+++ b/.github/workflows/delete-workflow-runs.yml
@@ -24,11 +24,10 @@ jobs:
           repository: ${{ github.repository }}
           retain_days: 7
           keep_minimum_runs: 6
-
       - name: Delete workflow runs for remote repo
         uses: Mattraks/delete-workflow-runs@v2
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.REMOTE_REPO_TOKEN }}  # 新创建的 Token
           repository: 'Owner/repository'
           retain_days: 7
           keep_minimum_runs: 6
